config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leviathan
  namespace: leviathan
spec:
  selector:
    app: leviathan
  ports:
  - name: leviathan
    protocol: TCP
    port: 8080
    targetPort: 8080
